# xarf-rs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  deny.toml  index.html  release-plz.toml
.github/: dependabot.yml
.github/workflows/: audit.yml  bench.yml  ci.yml  coverage.yml  release-plz.yml  semver.yml
benches/: xarf.rs
dev/bench/: data.js
src/: error.rs  generator.rs  hex.rs  lib.rs  model.rs  parser.rs  schemas.rs  v3_compat.rs  validator.rs
tests/: api_surface.rs  async_compat.rs  generator_tests.rs  golden_parser_tests.rs  model_tests.rs  parser_tests.rs  perf_budgets.rs  round_trip.rs  smoke.rs  snapshots.rs  v3_compat_tests.rs  validator_tests.rs
tests/snapshots/: snapshots__built_messaging_spam_report.snap  snapshots__errors_invalid_category.snap  snapshots__errors_missing_xarf_version.snap  snapshots__errors_strict_messaging_spam.snap  snapshots__evidence_hashes_per_algorithm.snap  snapshots__info_missing_optional_messaging_spam.snap  snapshots__round_trip_spec_messaging_spam.snap  snapshots__typed_report_messaging_spam.snap  snapshots__v3_login_attack_conversion.snap  snapshots__v3_missing_reporter_org_warnings.snap  snapshots__v3_phishing_conversion.snap  snapshots__v3_spam_conversion.snap  snapshots__warnings_unknown_fields.snap
