[package]
name = "xarf-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
description = "XARF v4 (eXtended Abuse Reporting Format) parser, validator, and generator with v3 compatibility"
license = "MIT"
repository = "https://github.com/wiggels/xarf-rs"
readme = "README.md"
keywords = ["xarf", "abuse", "security", "reporting", "spam"]
categories = ["parsing", "encoding"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
jsonschema = { version = "0.46.4", default-features = false }
uuid = { version = "1.10", features = ["v4"] }
sha2 = "0.11.0"
sha1 = "0.11.0"
md-5 = "0.11.0"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
once_cell = "1.19"

[dev-dependencies]
serde_json = { version = "1.0", features = ["preserve_order"] }
insta = { version = "1.40", features = ["json", "redactions"] }
static_assertions = "1.1"
tokio = { version = "1.40", features = ["rt", "rt-multi-thread", "macros", "time"] }
criterion = { version = "0.8.2", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "xarf"
harness = false

[profile.bench]
lto = "thin"
codegen-units = 1

[lib]
name = "xarf"
path = "src/lib.rs"
